Revert "fix: broken styles in program cert print media (#1800)"
This reverts commit f1c64e8dc2536f02be104b5fac52eaff0a7dd13e.

--- a/credentials/apps/credentials_theme_openedx/static/sass/_utilities.scss
+++ b/credentials/apps/credentials_theme_openedx/static/sass/_utilities.scss
@@ -76,8 +76,6 @@ $line-height-small: 1.5;
 // placeholder class to work around it (since those do work inside a media block).
 // Open Sass ticket: https://github.com/sass/sass/issues/1050
 // Stack Overflow: https://stackoverflow.com`/questions/14840918
-@mixin h2 {@extend .h2;}
-@mixin h3 {@extend .h3;}
 %h2 { @extend .h2; }
 %h3 { @extend .h3; }
 %m-0 { @extend .m-0; }
